--- a/TimeSwift/404.html
+++ b/TimeSwift/404.html
@@ -200,7 +200,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="https://time.techswift.xyz/holidays.html">More</a></li>
+                                <li><a class="dropdown-item" href="https://time.techswift.xyz/holidays.html">All Countdowns</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -239,7 +239,10 @@
                             class="footerButton">Status</a>
                     </div>
                 </div>
-                <div class="note">© 2023 techswift.xyz. All rights reserved.</div>
+                <div class="note">© 2023 techswift.xyz. Code licensed under the <a
+                    href="https://github.com/TechSwiftXYZ/timeswift/blob/main/LICENSE" class="footerButton note">GNU
+                    General Public
+                    License v3.0 license</a></div>
             </div>
         </footer>
     </section>
