--- a/TimeSwift/clockFullscreen.html
+++ b/TimeSwift/clockFullscreen.html
@@ -19,19 +19,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet" />
-    <title>TimeSwift | Local Clock (Fullscreen)</title>
+    <title>Local Clock (Fullscreen) | TimeSwift</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://time.techswift.xyz/assets/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Inter';
+            src: url(./assets/inter/Inter-V.ttf);
+        }
+
         body {
             background: black;
             color: #fff;
@@ -39,29 +38,37 @@
             font-size: 30px;
             font-weight: bold;
             letter-spacing: 2px;
-            background-color: rgb(0, 5, 17);
-            text-align: left;
-            margin-left: 25px
+            background-color: rgb(0, 9, 29);
+            text-align: center;
         }
 
         hr.solid {
             border-top: rgb(255, 255, 255)solid;
         }
 
+        .mainTitle {
+            font-weight: bold;
+            font-size: 80px;
+            text-align: center;
+        }
+
         .bigClock {
-            font-size: 20vw;
+            font-size: 15vw;
             color: #ffdc30;
             letter-spacing: normal;
         }
 
         .date {
-            font-size: 5vw;
+            font-size: 2.5vw;
         }
 
         .backButton {
             color: #fff;
             font-size: 30px;
             text-decoration: none;
+            text-align: left;
+            float: left;
+            margin-left: 20px;
         }
 
         .backButton:hover {
@@ -69,8 +76,8 @@
         }
 
         @media only screen and (max-width: 768px) {
-            body {
-                margin-left: 0px
+            .mainTitle {
+                font-size: 40px;
             }
         }
     </style>
@@ -78,10 +85,13 @@
             fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
                 d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
-        </svg>Back</a>
+    </svg>Back</a>
+    <br>
+    <h1 class="mainTitle">Fullscreen Clock</h1>
+    <h2>Press F11 or Fn + - to enable Super Fullscreen</h2>
     <section>
         <div class="col-m-4">
-            <div id="timezone"></div>
+            <div class="date" id="timezone">Current time:</div>
             <div class="bigClock" id="clock">
                 <script>clock()</script>
             </div>
