--- a/TimeSwift/help.html
+++ b/TimeSwift/help.html
@@ -12,26 +12,26 @@
     <!-- End Matomo Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Contact TimeSwift for support. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
+    <meta name="description"
+        content="Contact TimeSwift for support. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
     <meta name="keywords" content="Timer, Stopwatch, Time, Countdown, Easter countdown, Christmas countdown">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet" />
     <title>TimeSwift | Help</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://time.techswift.xyz/assets/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Inter';
+            src: url(./assets/inter/Inter-V.ttf);
+        }
+
         body {
             background: black;
             color: #fff;
@@ -39,7 +39,7 @@
             font-size: 20px;
             font-weight: normal;
             letter-spacing: 2px;
-            background-color: rgb(0, 5, 17);
+            background-color: rgb(0, 9, 29);
             text-align: center;
         }
 
@@ -279,7 +279,8 @@
                             Yes. We've taken many steps to make sure TimeSwift is as privacy-respecting as possible.
                             There are no ads and the analytics tool we use (Matomo On-Premise) is self-hosted on the
                             website host server located in Germany. These analytics aren't shared with anyone (including
-                            Google).
+                            Google). You can view our privacy policy on our <a href="./privacyPolicy.html">privacy
+                                policy page.</a>
                         </div>
                     </div>
                 </div>
@@ -352,9 +353,16 @@
                         <h3>Links</h3>
                         <a href="https://status.techswift.xyz" target="_blank" rel="noopener noreferrer"
                             class="footerButton">Status</a>
+                        <br>
+                        <a href="./privacyPolicy.html" class="footerButton">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="note">© 2023 techswift.xyz. All rights reserved.</div>
+                <br>
+                <br>
+                <div class="note">© 2023 techswift.xyz. Code licensed under the <a
+                        href="https://github.com/TechSwiftXYZ/timeswift/blob/main/LICENSE" class="footerButton note">GNU
+                        General Public
+                        License v3.0 license</a></div>
             </div>
         </footer>
     </section>
