--- a/TimeSwift/holidays/eid-al-adhaCountdown.html
+++ b/TimeSwift/holidays/eid-al-adhaCountdown.html
@@ -12,23 +12,27 @@
     <!-- End Matomo Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A live countdown to Eid al-Adha. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
-    <meta name="keywords" content="Timer, Countdown, Easter countdown, Christmas countdown, eid, eid al-adha, eid countdown, how long until eid al-adha, time until eid">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet" />
-    <title>TimeSwift | Eid al-Adha Countdown</title>
+    <meta name="description"
+        content="A live countdown to Eid al-Adha. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
+    <meta name="keywords"
+        content="eid, eid al-adha, eid countdown, how long until eid al-adha, time until eid, Timer, Countdown, Easter countdown, Christmas countdown">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <title>Eid al-Adha Countdown | TimeSwift</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://time.techswift.xyz/assets/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
 </head>
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Inter';
+            src: url(./assets/inter/Inter-V.ttf);
+        }
+
         body {
             background: black;
             color: #fff;
@@ -36,7 +40,7 @@
             font-size: 20px;
             font-weight: normal;
             letter-spacing: 2px;
-            background-color: rgb(0, 5, 17);
+            background-color: rgb(0, 9, 29);
             text-align: center;
         }
 
@@ -228,7 +232,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../holidays.html">More</a></li>
+                                <li><a class="dropdown-item" href="../holidays.html">All Countdowns</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -274,9 +278,15 @@
                         <h3>Links</h3>
                         <a href="https://status.techswift.xyz" target="_blank" rel="noopener noreferrer"
                             class="footerButton">Status</a>
+                        <br>
+                        <a href="./privacyPolicy.html" class="footerButton">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="note">© 2023 techswift.xyz. All rights reserved.</div>
+                <br>
+                <br>
+                <div class="note">© 2023 techswift.xyz. Code licensed under the <a
+                        href="https://github.com/TechSwiftXYZ/timeswift/blob/main/LICENSE" class="footerButton note">GNU
+                        General Public License v3.0 license</a></div>
             </div>
         </footer>
     </section>
