--- a/TimeSwift/holidays/eid-ul-fitrCountdown.html
+++ b/TimeSwift/holidays/eid-ul-fitrCountdown.html
@@ -13,25 +13,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A live countdown to Eid ul-Fitr along with a countdown for the start of Ramadan. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
-    <meta name="keywords" content="Timer, Countdown, Easter countdown, Christmas countdown, eid, eid ul-fitr, eid countdown, how long until eid, time until eid ul-fitr, eid mubarak">
+    <meta name="keywords" content="eid ul-fitr, eid, eid countdown, how long until eid, time until eid ul-fitr, eid mubarak, Timer, Countdown, Easter countdown, Christmas countdown">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet" />
-    <title>TimeSwift | Eid ul-Fitr Countdown</title>
+    <title>Eid ul-Fitr Countdown | TimeSwift</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
 </head>
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Inter';
+            src: url(./assets/inter/Inter-V.ttf);
+        }
+
         body {
             background: black;
             color: #fff;
@@ -39,7 +37,7 @@
             font-size: 20px;
             font-weight: normal;
             letter-spacing: 2px;
-            background-color: rgb(0, 5, 17);
+            background-color: rgb(0, 9, 29);
             text-align: center;
         }
 
@@ -231,7 +229,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../holidays.html">More</a></li>
+                                <li><a class="dropdown-item" href="../holidays.html">All Countdowns</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -247,7 +245,7 @@
         <div class="container-fluid">
             <div class="countdown-container">
                 <div id="eufCountdown"></div>
-                <div>Until Eid ul-Fitr (April 22nd 2023, expected date)</div>
+                <div>Until Eid ul-Fitr (April 10th 2023, expected date)</div>
                 <br>
             </div>
             <br>
@@ -275,17 +273,45 @@
                         <h3>Links</h3>
                         <a href="https://status.techswift.xyz" target="_blank" rel="noopener noreferrer"
                             class="footerButton">Status</a>
+                            <br>
+                        <a href="./privacyPolicy.html" class="footerButton">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="note">© 2023 techswift.xyz. All rights reserved.</div>
+                <br>
+                <br>
+                <div class="note">© 2023 techswift.xyz. Code licensed under the <a
+                    href="https://github.com/TechSwiftXYZ/timeswift/blob/main/LICENSE" class="footerButton note">GNU General Public
+                    License v3.0 license</a></div>
             </div>
         </footer>
     </section>
     <script>
         window.onload = () => {
-            var eufDate = new Date("April 22, 2023").getTime();
+            var rSDate = new Date("March 11, 2024").getTime();
 
-            var x = setInterval(function () {
+            var rSCountdown = setInterval(function () {
+
+                var now = new Date().getTime();
+
+                var distance = rSDate - now;
+
+                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                document.getElementById("rSCountdown").innerHTML = "Start of Ramadan (March 11th 2024, expected date): " + days + "d " + hours + "h "
+                    + minutes + "m " + seconds + "s ";
+
+                if (distance < 0) {
+                    clearInterval(rSCountdown);
+                    document.getElementById("rSCountdown").innerHTML = "Start of Ramadan (March 11th 2024): 0 days left";
+                }
+            }, 500);
+
+            var eufDate = new Date("April 10, 2024").getTime();
+
+            var eufCountdown = setInterval(function () {
 
                 var now = new Date().getTime();
 
@@ -300,30 +326,8 @@
                     + minutes + "m " + seconds + "s ";
 
                 if (distance < 0) {
-                    clearInterval(x);
+                    clearInterval(eufCountdown);
                     document.getElementById("eufCountdown").innerHTML = "Eid Mubarak!";
-                }
-            }, 500);
-
-            var rSDate = new Date("March 23, 2023").getTime();
-
-            var x = setInterval(function () {
-
-                var now = new Date().getTime();
-
-                var distance = rSDate - now;
-
-                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                document.getElementById("rSCountdown").innerHTML = "Start of Ramadan (March 23rd 2023): " + days + "d " + hours + "h "
-                    + minutes + "m " + seconds + "s ";
-
-                if (distance < 0) {
-                    clearInterval(x);
-                    document.getElementById("rSCountdown").innerHTML = "Start of Ramadan (March 23rd 2023): 0 days left";
                 }
             }, 500);
         };
