--- a/TimeSwift/timer.html
+++ b/TimeSwift/timer.html
@@ -12,29 +12,32 @@
     <!-- End Matomo Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Enter any time you like to start a countdown timer. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
-    <meta name="keywords" content="Timer, Stopwatch, Time, Countdown, counter, time counter, 10 minute timer, 5 minute timer">
+    <meta name="description"
+        content="Enter any time you like to start a countdown timer. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
+    <meta name="keywords"
+        content="Timer, Stopwatch, Time, Countdown, counter, time counter, 10 minute timer, 5 minute timer">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet" />
-    <title>TimeSwift | Timer</title>
+    <title>Timer | TimeSwift</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://time.techswift.xyz/assets/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Inter';
+            src: url(./assets/inter/Inter-V.ttf);
+        }
+
+        @font-face {
+            font-family: 'Anonymous Pro';
+            src: url(./assets/Anonymous-Pro/Anonymous_Pro.ttf);
+        }
+
         body {
             background: black;
             color: #fff;
@@ -42,7 +45,7 @@
             font-size: 20px;
             font-weight: normal;
             letter-spacing: 2px;
-            background-color: rgb(0, 5, 17);
+            background-color: rgb(0, 9, 29);
             text-align: center;
         }
 
@@ -92,54 +95,43 @@
             font-weight: bold;
         }
 
+        .btn {
+            width: auto;
+            padding: 10px 15px;
+            margin: 0px 20px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 4px;
+            border-top-left-radius: 4px;
+            cursor: pointer;
+            font-size: 20px;
+            transition: 0.5s;
+            color: white;
+            font-weight: 500;
+        }
+
         #startButton {
-            font-size: 30px;
-            color: #fff;
             background-color: #00af8c;
             border-radius: 20px;
         }
 
         #pauseButton {
-            font-size: 30px;
-            color: #fff;
             background-color: #2391ff;
             border-radius: 20px;
         }
 
         #resetButton {
-            font-size: 30px;
-            color: #fff;
             background-color: #d91600;
             border-radius: 20px;
         }
 
         #muteButton {
-            font-size: 30px;
-            color: #fff;
-            background-color: #343434;
+            background-color: #ec9e00;
             border-radius: 20px;
         }
 
-        #hours {
-            color: #fff;
-            border-radius: 15px;
-            background-color: rgb(0, 5, 17);
-            border: 1px solid rgb(255, 255, 255);
-            border-width: 2px;
-            padding: 5px;
-            margin-top: 5px
-        }
-
-        #minutes {
-            color: #fff;
-            border-radius: 15px;
-            background-color: rgb(0, 5, 17);
-            border: 1px solid rgb(255, 255, 255);
-            border-width: 2px;
-            padding: 5px;
-            margin-top: 5px
-        }
-
+        #hours,
+        #minutes,
         #seconds {
             color: #fff;
             border-radius: 15px;
@@ -150,22 +142,9 @@
             margin-top: 5px
         }
 
-        #Btn5Min {
-            font-size: 30px;
-            color: #000;
-            background-color: #fff;
-            border-radius: 20px;
-        }
-
-        #Btn10Min {
-            font-size: 30px;
-            color: #000;
-            background-color: #fff;
-            border-radius: 20px;
-        }
-
+        #Btn5Min,
+        #Btn10Min,
         #Btn15Min {
-            font-size: 30px;
             color: #000;
             background-color: #fff;
             border-radius: 20px;
@@ -173,7 +152,7 @@
 
         #timer {
             font-size: 200px;
-            font-family: 'Roboto Mono';
+            font-family: 'Anonymous Pro';
             text-shadow: 5px 5px 5px black;
             font-weight: bold;
         }
@@ -216,7 +195,7 @@
             width: 6.5vw;
         }
 
-        @media only screen and (max-width: 987px) {
+        @media only screen and (max-width: 1200px) {
             .mainTitle {
                 font-size: 50px;
             }
@@ -224,6 +203,10 @@
             .logoContainer {
                 height: 5vw;
                 width: 10vw
+            }
+
+            #timer {
+                font-size: 120px
             }
         }
 
@@ -242,7 +225,7 @@
             }
 
             #timer {
-                font-size: 50px
+                font-size: 90px
             }
 
             #startButton {
@@ -334,7 +317,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="./holidays.html">More</a></li>
+                                    <li><a class="dropdown-item" href="./holidays.html">All Countdowns</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -348,6 +331,13 @@
         <section id="mainContent" style="padding-top: 90px;">
             <section>
                 <h1 class="mainTitle">Timer</h1>
+                <a href="./timerFullscreen.html" class="footerButton">Fullscreen<svg
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-arrows-fullscreen" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707zm0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707zm-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707z" />
+                </svg></a>
+                <p class="note">(Warning: Timer progress is lost when entering fullscreen)</p>
                 <hr class="solid">
                 <div id="timer">00:00:00</div>
                 <label for="hours">Hours:</label>
@@ -358,17 +348,17 @@
                 <input type="number" id="seconds" name="seconds" min="0" max="59" value="0">
                 <br>
                 <br>
-                <button class="btn" id="startButton">Start Timer</button>
-                <button class="btn" id="pauseButton">Pause Timer</button>
-                <button class="btn" id="resetButton">Reset Timer</button>
-                <button class="btn" id="muteButton">Mute Sound</button>
+                <button class="btn" id="startButton">Start</button>
+                <button class="btn" id="pauseButton">Pause</button>
+                <button class="btn" id="resetButton">Reset</button>
+                <button class="btn" id="muteButton">Mute</button>
                 <hr class="solid">
                 <br>
                 <div class="smallTitle">Quick Timers</div>
                 <br>
-                <button class="btn" id="Btn5Min">5 Minute Timer</button>
-                <button class="btn" id="Btn10Min">10 Minute Timer</button>
-                <button class="btn" id="Btn15Min">15 Minute Timer</button>
+                <button class="btn" id="Btn5Min">5 Mins</button>
+                <button class="btn" id="Btn10Min">10 Mins</button>
+                <button class="btn" id="Btn15Min">15 Mins</button>
                 <audio id="timerEndSound">
                     <source src="assets/Timer End.mp3" type="audio/mpeg">
                 </audio>
@@ -391,9 +381,15 @@
                             <h3>Links</h3>
                             <a href="https://status.techswift.xyz" target="_blank" rel="noopener noreferrer"
                                 class="footerButton">Status</a>
+                                <br>
+                                <a href="./privacyPolicy.html" class="footerButton">Privacy Policy</a>
                         </div>
                     </div>
-                    <div class="note">© 2023 techswift.xyz. All rights reserved.</div>
+                    <br>
+                    <br>
+                    <div class="note">© 2023 techswift.xyz. Code licensed under the <a
+                            href="https://github.com/TechSwiftXYZ/timeswift/blob/main/LICENSE" class="footerButton note">GNU General Public
+                            License v3.0 license</a></div>
                 </div>
             </footer>
         </section>
@@ -437,11 +433,11 @@
             pauseBtn.addEventListener('click', () => {
                 isPaused = !isPaused;
                 if (isPaused == true) {
-                    pauseBtn.innerHTML = 'Unpause Timer'
+                    pauseBtn.innerHTML = 'Unpause'
                     audio.pause();
                     audio.currentTime = 0;
                 } else {
-                    pauseBtn.innerHTML = 'Pause Timer'
+                    pauseBtn.innerHTML = 'Pause'
                     audio.pause();
                     audio.currentTime = 0;
                 }
@@ -457,11 +453,11 @@
             muteBtn.addEventListener('click', () => {
                 isMuted = !isMuted;
                 if (isMuted == true) {
-                    muteBtn.innerHTML = 'Unmute Sound'
+                    muteBtn.innerHTML = 'Unmute'
                     audio.pause();
                     audio.currentTime = 0;
                 } else {
-                    muteBtn.innerHTML = 'Mute Sound'
+                    muteBtn.innerHTML = 'Mute'
                     audio.pause();
                     audio.currentTime = 0;
                 }
