--- a/TimeSwift/worldClock.html
+++ b/TimeSwift/worldClock.html
@@ -12,26 +12,27 @@
     <!-- End Matomo Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the time and cities across the world. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
-    <meta name="keywords" content="Timer, Stopwatch, Time, Countdown, Easter countdown, Christmas countdown, world time, world clock, time across the world">
+    <meta name="description"
+        content="View the time and cities across the world. Solve all your timekeeping needs with TimeSwift. Set a timer, start a stopwatch, and more.">
+    <meta name="keywords"
+        content="Timer, Stopwatch, Time, Countdown, Easter countdown, Christmas countdown, world time, world clock, time across the world">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet" />
-    <title>TimeSwift | World Clock</title>
+    <title>World Clock | TimeSwift</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://time.techswift.xyz/assets/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Inter';
+            src: url(./assets/inter/Inter-V.ttf);
+        }
+
         body {
             background: black;
             color: #fff;
@@ -39,7 +40,7 @@
             font-size: 20px;
             font-weight: normal;
             letter-spacing: 2px;
-            background-color: rgb(0, 5, 17);
+            background-color: rgb(0, 9, 29);
             text-align: center;
             overflow-x: hidden;
         }
@@ -316,7 +317,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./holidays.html">More</a></li>
+                                <li><a class="dropdown-item" href="./holidays.html">All Countdowns</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -432,9 +433,15 @@
                         <h3>Links</h3>
                         <a href="https://status.techswift.xyz" target="_blank" rel="noopener noreferrer"
                             class="footerButton">Status</a>
+                        <br>
+                        <a href="./privacyPolicy.html" class="footerButton">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="note">© 2023 techswift.xyz. All rights reserved.</div>
+                <br>
+                <br>
+                <div class="note">© 2023 techswift.xyz. Code licensed under the <a
+                        href="https://github.com/TechSwiftXYZ/timeswift/blob/main/LICENSE" class="footerButton note">GNU
+                        General Public License v3.0 license</a></div>
             </div>
         </footer>
     </section>
@@ -472,12 +479,13 @@
 
         function clockTZ(city, timezone) {
             let localTime = new Date();
-            let utcTime = localTime.getTime() + (localTime.getTimezoneOffset() * 60000);
+            let utcTime = localTime.getTime() - 20000 + (localTime.getTimezoneOffset() * 60000);
             let time = new Date(utcTime + (3600000 * timezone)).toLocaleTimeString();
             let utcOffset = timezone > 0 ? `+${timezone}` : timezone;
+            let date = new Date(utcTime + (3600000 * timezone)).toLocaleDateString();
             document.getElementById(`clock${city}`).innerHTML = time;
             document.getElementById(`offset${city}`).innerHTML = "UTC " + utcOffset;
-            document.getElementById(`date${city}`).innerHTML = d.toDateString();
+            document.getElementById(`date${city}`).innerHTML = date;
         }
 
         setInterval(() => {
